# dria-agent

./: .gitignore  README.md  pyproject.toml  run.py
agent/: agent.py  base.py  ollm.py  prompt.py  vllm.py
agent/clients/: api.py  apic.py  base.py  hfc.py  mlxc.py  ollmc.py
dria_agent/: __init__.py  __main__.py
dria_agent/agent/: __init__.py  agent.py  checkers.py  embedder.py  utils.py  vdb.py
dria_agent/agent/clients/: api.py  apic.py  base.py  hfc.py  mlxc.py  ollmc.py
dria_agent/agent/mcp/: __init__.py  client.py  tool_adapter.py
dria_agent/agent/settings/: providers.py
dria_agent/pythonic/: engine.py
dria_agent/tools/: __init__.py  embedder.py
examples/: apple_examples.py  docker_examples.py  exchange_rate_example.py  farcaster_example.py  github_examples.py  maps_example.py  math.py  math_example.py  meetup.py  meetup_example.py  run_loop_example.py  search_examples.py
examples/mcp/: mcp_example.py
examples/mcp/brave/: brave.py
examples/mcp/obsidian/: mcp.json  obsidian.py
pythonic/: engine.py  schemas.py  tool.py  util.py
tools/: embedder.py  tool.py  vdb.py
