[tool.poetry]
name = "dria-agent"
version = "0.1.0"
description = "speedy, performant and small tool calling agents"
authors = ["andthattoo <omer@firstbatch.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
smolagents = "^1.8.0"
vllm = {version = "^0.7.2", optional = true}
sentence-transformers = {version = "^3.4.1", optional = true}
transformers = {version = "^4.48.3", optional = true}
ollama = {version = "^0.4.7", optional = true}

[tool.poetry.extras]
vllm = ["vllm"]
huggingface = ["transformers", "sentence-transformers"]
ollama = ["ollama"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
