[tool.poetry]
name = "dria_agent"
version = "0.1.53"
description = "speedy, performant and small tool calling agents"
authors = ["andthattoo <omer@firstbatch.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.4.7"
sentence-transformers = {version = "^3.4.1", optional = true}
transformers = {version = "^4.48.3", optional = true}
mlx-lm = {version = "^0.21.4", optional = true}
openai = "^1.61.1"
rich = "^13.9.4"
scikit-learn = {version = "^1.6.1", optional = true}
google-auth-oauthlib = {version = "^1.2.1", optional = true}
google-api-python-client = {version = "^2.160.0", optional = true}
docker = {version = "^7.1.0", optional = true}
numpy = "^2.2.2"
urllib3 = "^2.3.0"
requests = "^2.32.3"
mlx = {version = "^0.22.1", optional = true}
markdownify = {version = "^0.14.1", optional = true}
duckduckgo-search = {version = "^7.3.2", optional = true}
smolagents = {version = "^1.8.1", optional = true}
slack-sdk = {version="^3.34.0", optional = true}
python-telegram = {version="^0.19.0",optional = true}

[tool.poetry.extras]
huggingface = ["transformers", "sentence-transformers"]
mlx = ["mlx", "mlx-lm", "sentence-transformers"]
tools = ["slack-sdk", "python-telegram", "scikit-learn", "docker", "google-api-python-client", "google-auth-oauthlib", "docker", "markdownify", "duckduckgo-search", "smolagents"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
